# bytecoin

./: .gitignore  Cargo.toml  README.md  id.identity
benches/: benchmarks.rs
p2p-lib/: Cargo.toml
p2p-lib/src/: lib.rs
src/: lib.rs  main.rs  main_new.rs
