[package]
name = "sl-coin"
version = "0.1.0"
edition = "2021"
author = "Iquiji"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
promptly = "0.3.0"

blake2 = "0.10.2"
chrono = "0.4"

sodiumoxide = "0.2.7"
rand = "0.8"

serde = {version="1.0",features=["derive"]}
serde_json = "1.0.78"

hex = "0.4"

parking_lot = "0.11"

tiny_http = "0.10.0"
ureq = "2.4"